--- a/style.css
+++ b/style.css
@@ -123,6 +123,7 @@ body {
 }
 
 .icon-btn {
+    background-color: red !important;
     flex-shrink: 0;
     line-height: 0;
     width: 39.11px;
@@ -138,19 +139,19 @@ body {
 }
 
 .btn-like {
-    background-image: url('./images/Union.svg');
+    background-image: url('.//Images/Union.svg');
 }
 
 .btn-like:hover {
-    background-image: url('./images/Union1.svg');
+    background-image: url('.//images/Union1.svg');
 }
 
 .btn-save {
-    background-image: url('./images/Rectangle11.svg');
+    background-image: url('.//images/Rectangle11.svg');
 }
 
 .btn-save:hover {
-    background-image: url('./images/Rectangle14.svg');
+    background-image: url('../images/Rectangle14.svg');
 }
 
 .card-actions {
@@ -173,5 +174,6 @@ body {
     z-index: 1;
     display: none;
 }
+
 
 
