--- a/style.css
+++ b/style.css
@@ -138,19 +138,19 @@ body {
 }
 
 .btn-like {
-    background-image: url('.//Images/Union.svg');
+    background-image: url('Images/Union.svg');
 }
 
 .btn-like:hover {
-    background-image: url('.//images/Union1.svg');
+    background-image: url('images/Union1.svg');
 }
 
 .btn-save {
-    background-image: url('.//images/Rectangle11.svg');
+    background-image: url('images/Rectangle11.svg');
 }
 
 .btn-save:hover {
-    background-image: url('../images/Rectangle14.svg');
+    background-image: url('images/Rectangle14.svg');
 }
 
 .card-actions {
@@ -173,6 +173,7 @@ body {
     z-index: 1;
     display: none;
 }
+
 
 
 
