--- a/style.css
+++ b/style.css
@@ -138,21 +138,21 @@ body {
 }
 
 .btn-like {
-    background-image: url('Images/Union.svg');
+    background-image: url('../Images/Union.svg');
     display: block !important;
 }
 
 .btn-like:hover {
-    background-image: url('images/Union1.svg');
+    background-image: url('../images/Union1.svg');
 }
 
 .btn-save {
-    background-image: url('images/Rectangle11.svg');
+    background-image: url('../images/Rectangle11.svg');
     display: block !important;
 }
 
 .btn-save:hover {
-    background-image: url('images/Rectangle14.svg');
+    background-image: url('../images/Rectangle14.svg');
 }
 
 .card-actions {
@@ -175,6 +175,7 @@ body {
     z-index: 1;
     display: none;
 }
+
 
 
 
